--- a/src/grid.scss
+++ b/src/grid.scss
@@ -15,7 +15,7 @@
 ///
 /// @param {unitless} $mult
 ///
-/// @returns $u * $mult
+/// @return {em} $u * $mult
 ///
 /// @todo validate $mult is a unitless number
 ///
