--- a/index.scss
+++ b/index.scss
@@ -173,3 +173,4 @@ $layout-schemas: (
 // =====================================================================================================
 @forward 'src/media-queries';
 @forward 'src/grid';
+@forward 'src/utils';
