--- a/src/media-queries.scss
+++ b/src/media-queries.scss
@@ -7,7 +7,6 @@
 @use 'sass:map';
 @use 'sass:list';
 @use 'utils' as *;
-@use 'throw';
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// The $breakpoints variable is a Sass map containing the screen sizes for different devices.
@@ -41,7 +40,7 @@ $breakpoints: (
       @return 'screen and (min-width: #{$start}) and (max-width: #{$end - 0.0625em})';
     }
   } @else {
-    @return throw.error(throw.index-msg($breakpoint, '$breakpoints'));
+    @return panic(index-msg($breakpoint, '$breakpoints'));
   }
 }
 
@@ -57,7 +56,7 @@ $breakpoints: (
   @if map.has-key($breakpoints, $breakpoint) {
     @return 'screen and (min-width: #{map.get($breakpoints, $breakpoint)})';
   } @else {
-    @return throw.error(throw.index-msg($breakpoint, '$breakpoints'));
+    @return panic(index-msg($breakpoint, '$breakpoints'));
   }
 }
 
@@ -73,7 +72,7 @@ $breakpoints: (
   @if map.has-key($breakpoints, $breakpoint) {
     @return 'screen and (max-width: #{map.get($breakpoints, $breakpoint) - 0.0625em})';
   } @else {
-    @return throw.error(throw.index-msg($breakpoint, '$breakpoints'));
+    @return panic(index-msg($breakpoint, '$breakpoints'));
   }
 }
 
@@ -90,13 +89,11 @@ $breakpoints: (
 ///
 @function between($breakpoint-start, $breakpoint-end) {
   @if not map.has-key($breakpoints, $breakpoint-start) {
-    @return throw.error(throw.index-msg($breakpoint-start, '$breakpoints'));
+    @return panic(index-msg($breakpoint-start, '$breakpoints'));
   } @else if not map.has-key($breakpoints, $breakpoint-end) {
-    @return throw.error(throw.index-msg($breakpoint-end, '$breakpoints'));
+    @return panic(index-msg($breakpoint-end, '$breakpoints'));
   } @else if $breakpoint-start == $breakpoint-end {
-    @return throw.error(
-      throw.value-msg($breakpoint-end, 'different breakpoints')
-    );
+    @return panic(value-msg($breakpoint-end, 'different breakpoints'));
   } @else {
     $start-width: map.get($breakpoints, $breakpoint-start);
     $end-width: map.get($breakpoints, $breakpoint-end) - 0.0625em;
