--- a/test/utils.test.scss
+++ b/test/utils.test.scss
@@ -1,4 +1,5 @@
 @use 'true' as *;
+@use '../lib/sass-door' as *;
 @use '../index' as *;
 
 @include test-module('utils') {
@@ -25,21 +26,21 @@
     ) {
       @include assert-equal(
         next-key-in-map($map, 'X'),
-        panic(index-msg('X', '$map'))
+        throw(index-msg('X', '$map'))
       );
     }
     // Incorrect input - incorrect type
     @include it('[Value Error] Throws when the input is not a map') {
       @include assert-equal(
         next-key-in-map(0, 'A'),
-        panic(value-msg(0, 'map'))
+        throw(value-msg(0, 'map'))
       );
     }
     // Incorrect input - incorrect type
     @include it('[Value Error] Throws when the input is not a string') {
       @include assert-equal(
         next-key-in-map($map, 0),
-        panic(value-msg(0, 'string'))
+        throw(value-msg(0, 'string'))
       );
     }
   }
@@ -59,7 +60,7 @@
     }
     // Incorrect input
     @include it('[Value Error] Throws when the input is not a string') {
-      @include assert-equal(capitalize(0), panic(value-msg(0, 'string')));
+      @include assert-equal(capitalize(0), throw(value-msg(0, 'string')));
     }
   }
 
