--- a/src/grid.scss
+++ b/src/grid.scss
@@ -7,6 +7,7 @@
 @use 'sass:map';
 @use 'sass:math';
 @use 'sass:list';
+@use '../lib/sass-door' as *;
 @use 'utils' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
