--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -33,47 +33,16 @@
 $u: 1.5em !default;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-/// This list contains the schematics of the design system grid. Every schematic will be a map that must comply the following structure.
-/// - `cols {unitless}`: This property determines how many repetitions are set in the style `grid-template-columns: repeat($cols, ...)`.
-/// - `gutter [length/percentage]`: This property determines the grid's `gap` style.
-/// - `colwidth [length/percentage]`: This property determines the value set in the style `grid-template-columns: repeat(cols, minmax(colwidth, 1fr))`, and changes to `minmax($colwidth, $colwidth)` when the property `fixedcol` is true.
-/// - `fixedcol [bool] {false}`: This property determines whether the grid's columns have a fixed width if true and flexible if false. When the value is true, it ignores the properties: `width` and `margin`, and assumes a reasonable and fixed `colwidth` length value.
-/// - `width [length/percentage/keyword] {min-content}` This property determines the grid's width, which normally should be set to "auto" for a responsive layout. The default value is forced when the property `fixedcol` is true.
-/// - `margin [length/percentage/auto] {auto}` This property determines the grid's horizontal margins value in the style `margin: 0 $margin`.
-/// - `mq [string]`: This property is used to set the grids styles to a particular media query.
-///
-/// @type list
-///
-/// @group grid
-///
-$grid-schemas: () !default;
-
-// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-/// This map contains the schematis of the designed layouts for the grid. Every schematic will be a map that must comply the following structure:
-/// - `_key {string}`: The key of the $layout-schemas map will be used as the name of the layout's class `.layout-#{$name}`.
-/// - `span {unitless}`: Number of columns the modules will span.
-/// - `offset {unitless}`: Number of columns the modules will skip.
-/// - `variations {list}`: This list contains maps similar to this layout schema. Variations have two additional properties:
-///   - `mq {string}`: Optional media query that affects this layout's variation.
-///   - `pseudo {string}`: Optional pseudoclass that aids in spanning of layout module, e.g. `:nth-child(even)`
-///
-/// @type map
-///
-/// @group grid
-///
-$layout-schemas: () !default;
-
-// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin creates the `.grid` CSS class using a list of grids schemas.
 ///
-/// @param {list} $schemas [$grid-schemas] - This parameter contains the list of grid schemas, see more in the variable `$grid-schemas`.
+/// @param {list} $grid-schemas - This parameter contains the list of grid schemas, see more in the variable `$grid-schemas`.
 ///
 /// @group grid
 ///
-@mixin build-grid($schemas: $grid-schemas) {
+@mixin build-grid($grid-schemas) {
   .grid {
     display: grid;
-    @each $schema in $schemas {
+    @each $schema in $grid-schemas {
       @include quick-mediaquery(map-get($schema, mq)) {
         @if map-get($schema, fixedcol) == true {
           @include grid-schema(
@@ -131,12 +100,12 @@ $layout-schemas: () !default;
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin creates the `.layout-#{}` CSS classes using a map of layout schemes.
 ///
-/// @param {map} $schemas [$layout-schemas] - This parameter contains the map of layout schemas, see more in the variable $layout-schemas.
+/// @param {map} $layout-schemas - This parameter contains the map of layout schemas, see more in the variable $layout-schemas.
 ///
 /// @group grid
 ///
-@mixin build-layouts($schemas: $layout-schemas) {
-  @each $name, $schema in $schemas {
+@mixin build-layouts($layout-schemas) {
+  @each $name, $schema in $layout-schemas {
     .layout-#{$name} {
       .layout-module {
         @include grid-column(map-get($schema, span), map-get($schema, offset));
@@ -185,11 +154,13 @@ $layout-schemas: () !default;
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin creates the `.layout-module-$span` CSS classes based on the grid schematic with the greatest number of columns.
 ///
+/// @param {list} $grid-schemas - This parameter contains the list of grid schemas, see more in the variable `$grid-schemas`.
+///
 /// @group grid
 ///
-@mixin build-modules($schemas: $grid-schemas) {
+@mixin build-modules($grid-schemas) {
   $highest-col: 0;
-  @each $schema in $schemas {
+  @each $schema in $grid-schemas {
     $cols: map-get($schema, cols);
     @if $cols > $highest-col {
       $highest-col: $cols;
@@ -201,26 +172,4 @@ $layout-schemas: () !default;
       grid-column: span $col;
     }
   }
-}
-
-// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-/// Change to false to avoid automatic css generation on this module.
-///
-/// @type bool
-///
-/// @group grid
-///
-$grid-auto-css: true !default;
-
-// =====================================================================================================
-// Automatic CSS generation
-// =====================================================================================================
-/// Generates grid and layout classes.
-///
-/// @group grid
-///
-@if $grid-auto-css {
-  @include build-grid();
-  @include build-layouts();
-  @include build-modules();
 }
