--- a/src/default/index.scss
+++ b/src/default/index.scss
@@ -4,8 +4,9 @@
 //  |___/\___|_| \__,_|\_,_|_|\__| \__\___/_||_|_| |_\__, |\_,_|_| \__,_|\__|_\___/_||_|
 //                                                   |___/
 // =====================================================================================================
-@use 'media-queries.default';
-@use 'grid.default';
+@use '../index.scss' as *;
+@use 'media-queries.default' as *;
+@use 'grid.default' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // CSS Building
