--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,6 @@
 //
 // =====================================================================================================
 
+@forward 'color';
 @forward 'grid';
 @forward 'media-queries';
